[package]
name = "data-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^3.0"
snap7 = "^0.0.1"
snap7-sys = "^0.1.4"
libc = "^0.2"
bindgen = "^0.51"
log = { version = "^0.4", features = ["std", "serde"] }
env_logger = "^0.10"
concurrent-queue = "^2.2"
